--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <!-- Mensagem de boas vindas no centro superior e ícone do carrinho ao lado -->
-            <div class="field__welcome">
+            <div class="field__welcome-cart">
                 <h1 class="welcome">Bem vindo!</h1> 
                 <h2 class="news">confira o que preparamos <br />
                     para você :)</h2>
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Javascript usado p/ o modo 'dark and light' -->
-            <script defer>
+            <script>
             var icon = document.getElementById("icon");
     
             icon.onclick = function() {
@@ -69,8 +69,8 @@
                     <div class="line-3"></div>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="#CEP">Busca por <br> CEP</a></li>
-                    <li><a href="#SELLERS">Busca por <br> LOJA</a></li>
+                    <li><a href="#CEP">Busca por CEP</a></li>
+                    <li><a href="#SELLERS">Busca por LOJA</a></li>
                 </ul>
             </nav>
 
@@ -239,7 +239,7 @@
                 <h2 id="field__instructions-cep">
                     1° - Abra seu console; <br>
                     2° - Digite seu CEP (válido) na caixa de texto; <br> 
-                    3° - Confirme com a tecla "Enter"; <br>
+                    3° - Confirme com a tecla "Enter" ou "TAB"; <br>
                     4° - Clique em "XHR" e depois em "Resposta"; <br>
                     5° - Veja a lista (sellers) de lojas mais próximas de você!
                 </h2>
@@ -261,7 +261,7 @@
                 <h2 id="field__instructions-seller">
                     1° - Abra seu console; <br>
                     2° - Digite o nome da LOJA na caixa de texto; <br> 
-                    3° - Confirme com a tecla "Enter"; <br>
+                    3° - Confirme com a tecla "Enter" ou "TAB"; <br>
                     4° - Clique em "XHR" e depois em "Resposta"; <br>
                     5° - Veja os produtos (productName) da loja procurada!
                 </h2>
